--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Hosanna12e.github.io/React_OpenAI-QnA"
   "name": "openai-qna",
   "private": true,
   "version": "0.0.0",
