--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Hosanna12e.github.io/React_OpenAI-QnA",
   "name": "openai-qna",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy" : "npm run dev",
+    "deploy" : "gh-pages -d dev"
   },
   "dependencies": {
     "openai": "^4.28.0",
